@@ -1,3 +1,5 @@
+26.may (ws)
+      - fix #5867: End Repeat disappears when creating multimeasure rests
 24.may (ws)
       - fix remove segment
 23.may (ws)
